@@ -2,79 +2,154 @@ package beans;
 
 import java.util.List;
 
+/**
+ * The Class Bean2.
+ */
 public class Bean2 {
+
+	/** The string 3. */
 	private String string3 = "";
+
+	/** The string 4. */
 	private String string4 = null;
+
+	/** The int 5. */
 	private int int5 = 0;
-	private Double double6 = new Double(0);
+
+	/** The double 6. */
+	private Double double6 = Double.valueOf(0);
+
+	/** The double 7. */
 	private Double double7 =null;
+
+	/** The list integer. */
 	private List<Integer> listInteger;
 	
 	
+	/**
+	 * Gets the list integer.
+	 *
+	 * @return the list integer
+	 */
 	public List<Integer> getListInteger() {
 		return listInteger;
 	}
 
 
+	/**
+	 * Sets the list integer.
+	 *
+	 * @param listInteger the new list integer
+	 */
 	public void setListInteger(List<Integer> listInteger) {
 		this.listInteger = listInteger;
 	}
 
-
-	public Bean2() {
-	}
-
-
+	/**
+	 * Gets the string 3.
+	 *
+	 * @return the string 3
+	 */
 	public String getString3() {
 		return string3;
 	}
 
 
+	/**
+	 * Sets the string 3.
+	 *
+	 * @param string3 the new string 3
+	 */
 	public void setString3(String string3) {
 		this.string3 = string3;
 	}
 
 
+	/**
+	 * Gets the string 4.
+	 *
+	 * @return the string 4
+	 */
 	public String getString4() {
 		return string4;
 	}
 
 
+	/**
+	 * Sets the string 4.
+	 *
+	 * @param string4 the new string 4
+	 */
 	public void setString4(String string4) {
 		this.string4 = string4;
 	}
 
 
+	/**
+	 * Gets the int 5.
+	 *
+	 * @return the int 5
+	 */
 	public int getInt5() {
 		return int5;
 	}
 
 
+	/**
+	 * Sets the int 5.
+	 *
+	 * @param int5 the new int 5
+	 */
 	public void setInt5(int int5) {
 		this.int5 = int5;
 	}
 
 
+	/**
+	 * Gets the double 6.
+	 *
+	 * @return the double 6
+	 */
 	public Double getDouble6() {
 		return double6;
 	}
 
 
+	/**
+	 * Sets the double 6.
+	 *
+	 * @param double6 the new double 6
+	 */
 	public void setDouble6(Double double6) {
 		this.double6 = double6;
 	}
 
 
+	/**
+	 * Gets the double 7.
+	 *
+	 * @return the double 7
+	 */
 	public Double getDouble7() {
 		return double7;
 	}
 
 
+	/**
+	 * Sets the double 7.
+	 *
+	 * @param double7 the new double 7
+	 */
 	public void setDouble7(Double double7) {
 		this.double7 = double7;
 	}
 
 
+	/**
+	 * To string.
+	 *
+	 * @return the string
+	 */
 	@Override
 	public String toString() {
 		return "Bean2 [string3=" + string3 + ", string4=" + string4 + ", int5=" + int5 + ", double6=" + double6
